added figure to report

--- a/notebooks/04_paper.ipynb
+++ b/notebooks/04_paper.ipynb
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "20c96ba0",
    "metadata": {},
    "outputs": [
@@ -1569,6 +1569,10 @@
     "\t- 20 with cars\n",
     "\t- 1 with goods truck\n",
     "\t- 1 with other vehicle\n",
+    "- accident types: \n",
+    "\t2 = Accident caused by turning off the road (2)\n",
+    "\t3 = Accident caused by turning into a road or by\n",
+    "crossing into a road (20)\n",
     "- 2020 only 1 accident, all other years 5 or 6 accidents reported (no information about construction work found for 2020\n",
     "--> this supports our assumption that the cars crossing a bicycle lane could be the problem here\n",
     "\n",
