finalized figure panel for results section

--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -197,3 +197,11 @@ Volume},
  volume = {1784},
  year = {2002}
 }
+
+@misc{streetview2024,
+  author       = {{Google}},
+  title        = {{Google Street View: Junction Heinrich-Mann-Straße/Hermann-Hesse-Straße Berlin}},
+  url          = {https://maps.app.goo.gl/pxxqfSwW8Rbtu6AZ8},
+  year         = {2025},
+  urldate      = {2025-12-05} 
+}
