--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -58,7 +58,7 @@
 
 @misc{Unfallatlas2025,
   title        = {{Accident Atlas}},
-  author       = {{German Federal Statistical Office}},
+  author       = {{Destatis}},
   url          = {https://unfallatlas.statistikportal.de},
   year         = {2025},
   urldate      = {2025-12-05}
@@ -204,4 +204,19 @@ Volume},
   url          = {https://maps.app.goo.gl/pxxqfSwW8Rbtu6AZ8},
   year         = {2025},
   urldate      = {2025-12-05} 
+}
+
+@article{Dijkstra1959,
+  title = {A note on two problems in connexion with graphs},
+  volume = {1},
+  ISSN = {0945-3245},
+  url = {http://dx.doi.org/10.1007/BF01386390},
+  DOI = {10.1007/bf01386390},
+  number = {1},
+  journal = {Numerische Mathematik},
+  publisher = {Springer Science and Business Media LLC},
+  author = {Dijkstra,  E. W.},
+  year = {1959},
+  month = dec,
+  pages = {269–271}
 }
