rewrite of abstract, introduction and data section

--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -56,14 +56,6 @@
  year = {2021}
 }
 
-@misc{Unfallatlas2025,
-  title        = {{Accident Atlas}},
-  author       = {{Destatis}},
-  url          = {https://unfallatlas.statistikportal.de},
-  year         = {2025},
-  urldate      = {2025-12-05}
-}
-
 @dataset{kaiser_2025_15332147,
  author = {Kaiser, Silke Kirstin},
  doi = {10.5281/zenodo.15332147},
@@ -219,4 +211,49 @@ Volume},
   year = {1959},
   month = dec,
   pages = {269–271}
+}
+
+@online{BerlinZaehlen_Fahrradbarometer,
+  author  = {{Senatsverwaltung für Mobilität, Verkehr, Klimaschutz und Umwelt}},
+  title   = {Zählstellen und Fahrradbarometer: Fahrradverkehr in Zahlen},
+  url     = {https://www.berlin.de/sen/uvk/mobilitaet-und-verkehr/verkehrsplanung/radverkehr/weitere-radinfrastruktur/zaehlstellen-und-fahrradbarometer/},
+  urldate = {2026-01-31},
+  langid  = {german}
+}
+
+@misc{Unfallatlas2025,
+  author       = {{Destatis}},
+  year         = {2025},
+  title        = {German Accident Atlas},
+  url           = {https://unfallatlas.statistikportal.de/},
+  note         = {Retrieved January 14 2026}
+}
+
+@misc{BerlinRadverkehrzaehlstellen2023,
+  author       = {{Senate Department for Urban Mobility, Transport, Climate Action and the Environment}},
+  title        = {Radverkehrsz{\"a}hlstellen -- Jahresbericht 2023},
+  year         = {2024},
+  month        = may,
+  url          = {https://www.berlin.de/sen/uvk/_assets/verkehr/verkehrsplanung/radverkehr/weitere-radinfrastruktur/zaehlstellen-und-fahrradbarometer/bericht_radverkehr_2023.pdf?ts=1752674590},
+  note         = {Stand: 31.05.2024 (Berlin, Mai 2024). Accessed: 2026-02-01}
+}
+
+@article{dadashova2020estimation,
+  title={Estimation of average annual daily bicycle counts using crowdsourced Strava data},
+  author={Dadashova, Bahar and Griffin, Greg P and Das, Subasish and Turner, Shawn and Sherman, Bonnie},
+  journal={Transportation research record},
+  volume={2674},
+  number={11},
+  pages={390--402},
+  year={2020},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@article{clayton1987empirical,
+  title={Empirical Bayes estimates of age-standardized relative risks for use in disease mapping},
+  author={Clayton, David and Kaldor, John},
+  journal={Biometrics},
+  pages={671--681},
+  year={1987},
+  publisher={JSTOR}
 }
