added new figure 3 to the report

--- a/notebooks/04_paper.ipynb
+++ b/notebooks/04_paper.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "9150cb01",
    "metadata": {},
    "outputs": [],
@@ -45,6 +45,9 @@
     "from tueplots.constants import markers\n",
     "from tueplots.constants.color import palettes\n",
     "from tueplots.constants.color import rgb\n",
+    "\n",
+    "from PIL import Image\n",
+    "from matplotlib.colors import LogNorm, LinearSegmentedColormap\n",
     "\n",
     "PROJECT_ROOT = Path.cwd().parent\n",
     "sys.path.append(str(PROJECT_ROOT))\n",
@@ -721,6 +724,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c5bdfb26",
+   "metadata": {},
+   "source": [
+    "### Create a first heatmap"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 39,
    "id": "be1f6726",
@@ -884,8 +895,7 @@
    "id": "0d52805c",
    "metadata": {},
    "source": [
-    "## Figure 4 - Zoom in on Junction 2482\n",
-    "### Plot special segment and assigned accidents - Risk scaled colors"
+    "### Zoom in on Junction 2482"
    ]
   },
   {
@@ -1022,7 +1032,7 @@
    "id": "623ab6d4",
    "metadata": {},
    "source": [
-    "### Details on Selected Junction"
+    "### Inspect selected Junction"
    ]
   },
   {
@@ -1286,6 +1296,14 @@
    "metadata": {},
    "source": [
     "### Create Folium Map"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "783deba1",
+   "metadata": {},
+   "source": [
+    "This folium map is required to achieve a visualization with street names and to provide an interactive example."
    ]
   },
   {
@@ -1567,16 +1585,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "23a31e59",
+   "metadata": {},
+   "source": [
+    "## Creation of the Panel used as Figure 3 in the Report"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 85,
    "id": "dab0226a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from PIL import Image\n",
-    "from matplotlib.colors import LogNorm, LinearSegmentedColormap\n",
-    "\n",
-    "# Define the colormap (make sure this is defined before the functions)\n",
+    "# Define the colormap\n",
     "diverging_colors = [rgb.tue_blue, rgb.pn_gray, rgb.tue_red]\n",
     "tue_map = LinearSegmentedColormap.from_list(\"tue_blue_red\", diverging_colors, N=256)\n",
     "\n",
@@ -1680,14 +1703,14 @@
     "        for ax, lab in zip(axs, labels):\n",
     "            ax.text(0.5, -0.06, lab, transform=ax.transAxes, ha=\"center\", va=\"top\")\n",
     "        \n",
-    "        fig.savefig(outpath, dpi=300)\n",
+    "        fig.savefig(outpath, dpi=300) # specify dpi for high-res images\n",
     "        plt.show()\n",
     "        return fig, axs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 86,
    "id": "bf5ecd75",
    "metadata": {},
    "outputs": [
@@ -1708,14 +1731,6 @@
     "    junction_df=agg_junctions\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "57d60027",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
